[project]
name = "pose-estimation-app"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W = pycodestyle  F = pyflakes  I = isort  UP = pyupgrade
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # line too long — handled by line-length above
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
